Fix spacing issues around result cards

--- a/src/components/TrainStatus.scss
+++ b/src/components/TrainStatus.scss
@@ -9,8 +9,6 @@ $silver: #919D9D;
 
 .results-group {
   line-height: 125%;
-  border: 1px solid #cccccc;
-  border-radius: 5px;
 }
 
 .train-line {
